--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,38 +1,42 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8c82f3">  <td>19/09/10 16:48:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day15.study01.section02.ApiInfoCase)[pri:0, instance:lemon.day15.study01.section02.All_Test_Case@6ad5c04e]">test_case</td> 
-  <td>main@2020152163</td>   <td></td> </tr>
-<tr bgcolor="8c82f3">  <td>19/09/10 16:48:58</td>   <td>538</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day15.study01.section02.ApiInfoCase)[pri:0, instance:lemon.day15.study01.section02.All_Test_Case@6ad5c04e]">test_case</td> 
-  <td>main@2020152163</td>   <td></td> </tr>
-<tr bgcolor="8c82f3">  <td>19/09/10 16:48:58</td>   <td>619</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day15.study01.section02.ApiInfoCase)[pri:0, instance:lemon.day15.study01.section02.All_Test_Case@6ad5c04e]">test_case</td> 
-  <td>main@2020152163</td>   <td></td> </tr>
-<tr bgcolor="8c82f3">  <td>19/09/10 16:48:58</td>   <td>691</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day15.study01.section02.ApiInfoCase)[pri:0, instance:lemon.day15.study01.section02.All_Test_Case@6ad5c04e]">test_case</td> 
-  <td>main@2020152163</td>   <td></td> </tr>
-<tr bgcolor="8c82f3">  <td>19/09/10 16:48:58</td>   <td>768</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day15.study01.section02.ApiInfoCase)[pri:0, instance:lemon.day15.study01.section02.All_Test_Case@6ad5c04e]">test_case</td> 
-  <td>main@2020152163</td>   <td></td> </tr>
-<tr bgcolor="8c82f3">  <td>19/09/10 16:48:59</td>   <td>851</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day15.study01.section02.ApiInfoCase)[pri:0, instance:lemon.day15.study01.section02.All_Test_Case@6ad5c04e]">test_case</td> 
-  <td>main@2020152163</td>   <td></td> </tr>
-<tr bgcolor="8c82f3">  <td>19/09/10 16:48:59</td>   <td>937</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day15.study01.section02.ApiInfoCase)[pri:0, instance:lemon.day15.study01.section02.All_Test_Case@6ad5c04e]">test_case</td> 
-  <td>main@2020152163</td>   <td></td> </tr>
-<tr bgcolor="8c82f3">  <td>19/09/10 16:48:59</td>   <td>1017</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day15.study01.section02.ApiInfoCase)[pri:0, instance:lemon.day15.study01.section02.All_Test_Case@6ad5c04e]">test_case</td> 
-  <td>main@2020152163</td>   <td></td> </tr>
-<tr bgcolor="8c82f3">  <td>19/09/10 16:48:59</td>   <td>1099</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day15.study01.section02.ApiInfoCase)[pri:0, instance:lemon.day15.study01.section02.All_Test_Case@6ad5c04e]">test_case</td> 
-  <td>main@2020152163</td>   <td></td> </tr>
-<tr bgcolor="8c82f3">  <td>19/09/10 16:48:59</td>   <td>1185</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day15.study01.section02.ApiInfoCase)[pri:0, instance:lemon.day15.study01.section02.All_Test_Case@6ad5c04e]">test_case</td> 
-  <td>main@2020152163</td>   <td></td> </tr>
-<tr bgcolor="8c82f3">  <td>19/09/10 16:48:59</td>   <td>1266</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day15.study01.section02.ApiInfoCase)[pri:0, instance:lemon.day15.study01.section02.All_Test_Case@6ad5c04e]">test_case</td> 
-  <td>main@2020152163</td>   <td></td> </tr>
-<tr bgcolor="8c82f3">  <td>19/09/10 16:48:59</td>   <td>1344</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day15.study01.section02.ApiInfoCase)[pri:0, instance:lemon.day15.study01.section02.All_Test_Case@6ad5c04e]">test_case</td> 
-  <td>main@2020152163</td>   <td></td> </tr>
-<tr bgcolor="8c82f3">  <td>19/09/10 16:48:59</td>   <td>1420</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day15.study01.section02.ApiInfoCase)[pri:0, instance:lemon.day15.study01.section02.All_Test_Case@6ad5c04e]">test_case</td> 
-  <td>main@2020152163</td>   <td></td> </tr>
-<tr bgcolor="8c82f3">  <td>19/09/10 16:48:59</td>   <td>1495</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day15.study01.section02.ApiInfoCase)[pri:0, instance:lemon.day15.study01.section02.All_Test_Case@6ad5c04e]">test_case</td> 
-  <td>main@2020152163</td>   <td></td> </tr>
-<tr bgcolor="8c82f3">  <td>19/09/10 16:48:59</td>   <td>1571</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day15.study01.section02.ApiInfoCase)[pri:0, instance:lemon.day15.study01.section02.All_Test_Case@6ad5c04e]">test_case</td> 
-  <td>main@2020152163</td>   <td></td> </tr>
-<tr bgcolor="8c82f3">  <td>19/09/10 16:48:59</td>   <td>1655</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day15.study01.section02.ApiInfoCase)[pri:0, instance:lemon.day15.study01.section02.All_Test_Case@6ad5c04e]">test_case</td> 
-  <td>main@2020152163</td>   <td></td> </tr>
-<tr bgcolor="8c82f3">  <td>19/09/10 16:48:59</td>   <td>1728</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day15.study01.section02.ApiInfoCase)[pri:0, instance:lemon.day15.study01.section02.All_Test_Case@6ad5c04e]">test_case</td> 
-  <td>main@2020152163</td>   <td></td> </tr>
+<tr bgcolor="e5ccce">  <td>19/09/18 17:30:32</td>   <td>0</td> <td title="&lt;&lt;All_Test_Case.afterSuite()[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1365008457</td>   <td></td> </tr>
+<tr bgcolor="e5ccce">  <td>19/09/18 17:30:30</td>   <td>-1771</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
+  <td>main@1365008457</td>   <td></td> </tr>
+<tr bgcolor="e5ccce">  <td>19/09/18 17:30:30</td>   <td>-1763</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
+  <td>main@1365008457</td>   <td></td> </tr>
+<tr bgcolor="e5ccce">  <td>19/09/18 17:30:30</td>   <td>-1760</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
+  <td>main@1365008457</td>   <td></td> </tr>
+<tr bgcolor="e5ccce">  <td>19/09/18 17:30:31</td>   <td>-1149</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
+  <td>main@1365008457</td>   <td></td> </tr>
+<tr bgcolor="e5ccce">  <td>19/09/18 17:30:31</td>   <td>-1076</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
+  <td>main@1365008457</td>   <td></td> </tr>
+<tr bgcolor="e5ccce">  <td>19/09/18 17:30:31</td>   <td>-1000</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
+  <td>main@1365008457</td>   <td></td> </tr>
+<tr bgcolor="e5ccce">  <td>19/09/18 17:30:31</td>   <td>-919</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
+  <td>main@1365008457</td>   <td></td> </tr>
+<tr bgcolor="e5ccce">  <td>19/09/18 17:30:31</td>   <td>-835</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
+  <td>main@1365008457</td>   <td></td> </tr>
+<tr bgcolor="e5ccce">  <td>19/09/18 17:30:31</td>   <td>-831</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
+  <td>main@1365008457</td>   <td></td> </tr>
+<tr bgcolor="e5ccce">  <td>19/09/18 17:30:31</td>   <td>-755</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
+  <td>main@1365008457</td>   <td></td> </tr>
+<tr bgcolor="e5ccce">  <td>19/09/18 17:30:31</td>   <td>-674</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
+  <td>main@1365008457</td>   <td></td> </tr>
+<tr bgcolor="e5ccce">  <td>19/09/18 17:30:31</td>   <td>-599</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
+  <td>main@1365008457</td>   <td></td> </tr>
+<tr bgcolor="e5ccce">  <td>19/09/18 17:30:31</td>   <td>-520</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
+  <td>main@1365008457</td>   <td></td> </tr>
+<tr bgcolor="e5ccce">  <td>19/09/18 17:30:31</td>   <td>-442</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
+  <td>main@1365008457</td>   <td></td> </tr>
+<tr bgcolor="e5ccce">  <td>19/09/18 17:30:32</td>   <td>-353</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
+  <td>main@1365008457</td>   <td></td> </tr>
+<tr bgcolor="e5ccce">  <td>19/09/18 17:30:32</td>   <td>-276</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
+  <td>main@1365008457</td>   <td></td> </tr>
+<tr bgcolor="e5ccce">  <td>19/09/18 17:30:32</td>   <td>-190</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
+  <td>main@1365008457</td>   <td></td> </tr>
+<tr bgcolor="e5ccce">  <td>19/09/18 17:30:32</td>   <td>-114</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="All_Test_Case.test_case(lemon.day19.pojo.ApiCaseDetail)[pri:0, instance:lemon.day19.testCase.All_Test_Case@256216b3]">test_case</td> 
+  <td>main@1365008457</td>   <td></td> </tr>
 </table>
